complementary working, funcionality changes

--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,10 @@ button:focus {
   margin-top: 0;
 }
 
+.uppercase-txt {
+  text-transform: uppercase;
+}
+
 footer {
   position: absolute;
   bottom: 5px;
