--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,6 @@ body {
   justify-content: space-between;
   width: 70%;
   margin: 10px 0px;
-  
 }
 
 .hex {
@@ -69,7 +68,6 @@ button:focus {
   align-items: center;
   flex-direction: column;
   height: 500px;
-  /* width: 800px; */
   width: 70%;
   background-color: #FF0000;
 }
@@ -78,6 +76,7 @@ button:focus {
   color: #00ffff;
   letter-spacing: 0.2em;
   margin-top: 0;
+  font-size: 2em;
 }
 
 .uppercase-txt {
@@ -98,18 +97,28 @@ footer p {
 
 @media only screen and (max-width: 680px ) {
   .inputs {
-      flex-direction: column;
       margin: 5px 0px;
   }
-
+  .hex {
+    width: 50%;
+  }
   .btn-block {
       margin-top: 5px;
   }
+
+  .color-text {
+    font-size: 1.5em;
+  }
+  
 }
 
 @media only screen and (max-width: 417px) {
   .inputs button {
       font-size: 0.7em;
+  }
+
+  .color-text {
+    font-size: 1em;
   }
 }
 
@@ -117,5 +126,7 @@ footer p {
   .color {
       height: 70vh;
   }
+
+
 }
 
